Mitigated some layout issues

--- a/cards.css
+++ b/cards.css
@@ -61,8 +61,8 @@
 .card>ul
 {
     position:                   relative;
-    top:                        10%;
-    height:                     90%;
+    top:                        15%;
+    height:                     85%;
     overflow:                   hidden;
     margin:                     0 2ch;
 
@@ -82,6 +82,11 @@
     margin:                     0;
 }
 
+.small
+{
+    font-size:                  75%;
+}
+
 .icon
 {
     height:                     1.25em;
@@ -93,15 +98,16 @@
     transform:                  scale(-1,1);
 }
 
-.icon.overlay
+.element
 {
-    margin-left:                -1.25em;
-    z-index:                    1;
+    height:                     1.75em;
+    vertical-align:             middle;
 }
 
-.icon.element
+.element.overlay
 {
-    vertical-align:             middle;
+    margin-left:                -1.75em;
+    z-index:                    1;
 }
 
 .card .initiative
